force-app/main/default/objects/Product2/fields/Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price__c</fullName>
    <formula>IF( ISPICKVAL( Type__c , &apos;Standard Products&apos;),  Destination_Price__c /  Capacity_Desks__c  ,Destination_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>