force-app/main/default/objects/Product2/fields/Contract_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Requirement</label>
    <type>Checkbox</type>
</CustomField>