force-app/main/default/objects/Product2/fields/Destination_Price__c.field-meta.xml
<CustomField>
    <fullName>Destination_Price__c</fullName>
    <label>Destination Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>