force-app/main/default/objects/Product2/fields/Last_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Price__c</fullName>
    <label>Last Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>