force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מאתגר - ברק צהוב</fullName>
            </value>
            <value>
                <fullName>סטנדרטי חלון</fullName>
            </value>
            <value>
                <fullName>סטנדרטי חלון מעל 8 עמדות</fullName>
            </value>
            <value>
                <fullName>סטנדרטי פנימי</fullName>
            </value>
            <value>
                <fullName>RENT</fullName>
            </value>
            <value>
                <fullName>SUITE</fullName>
            </value>
            <value>
                <fullName>TOP - כוכב</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>