force-app/main/default/objects/Product2/fields/Size_m2__c.field-meta.xml
<CustomField>
    <fullName>Size_m2__c</fullName>
    <label>Size (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>