force-app/main/default/objects/Product2/fields/State_description__c.field-meta.xml
<CustomField>
    <fullName>State_description__c</fullName>
    <label>State description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>