force-app/main/default/objects/Product2/fields/Time_beetween_order_lines__c.field-meta.xml
<CustomField>
    <fullName>Time_beetween_order_lines__c</fullName>
    <label>Time beetween order lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>