force-app/main/default/objects/Product2/fields/Track_Availability__c.field-meta.xml
<CustomField>
    <fullName>Track_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Availability</label>
    <type>Checkbox</type>
</CustomField>