force-app/main/default/objects/Product2/fields/Track_Stock__c.field-meta.xml
<CustomField>
    <fullName>Track_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Stock</label>
    <type>Checkbox</type>
</CustomField>