force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Products</fullName>
            </value>
            <value>
                <fullName>On demand Products</fullName>
            </value>
            <value>
                <fullName>Extra for all products</fullName>
            </value>
            <value>
                <fullName>Extra for meter Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>