force-app/main/default/objects/Product2/fields/Window__c.field-meta.xml
<CustomField>
    <fullName>Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Window</label>
    <type>Checkbox</type>
</CustomField>