force-app/main/default/objects/Product2/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Location__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>