force-app/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>Location__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Window__c</columns>
    <columns>Floor__c</columns>
    <columns>Calculated_Price__c</columns>
    <columns>Capacity_Desks__c</columns>
    <columns>Destination_Price__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Products</label>
</ListView>