force-app/main/default/objects/Product2/listViews/BSR_City_Products.listView-meta.xml
<ListView>
    <fullName>BSR_City_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Capacity_Desks__c</columns>
    <columns>Calculated_Price__c</columns>
    <columns>Destination_Price__c</columns>
    <columns>Floor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>BSR City</value>
    </filters>
    <label>BSR City Products</label>
</ListView>