force-app/main/default/objects/Product2/listViews/Gav_Yam_Products.listView-meta.xml
<ListView>
    <fullName>Gav_Yam_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Floor__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>State__c</columns>
    <columns>State_description__c</columns>
    <columns>Capacity_Desks__c</columns>
    <columns>Destination_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Gav Yam</value>
    </filters>
    <filters>
        <field>Floor__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Gav Yam Products</label>
</ListView>