force-app/main/default/objects/Product2/listViews/Millennium_House_Products.listView-meta.xml
<ListView>
    <fullName>Millennium_House_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>State__c</columns>
    <columns>State_description__c</columns>
    <columns>Capacity_Desks__c</columns>
    <columns>Destination_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Millennium House</value>
    </filters>
    <label>Millennium House Products</label>
</ListView>