force-app/main/default/objects/Product2/listViews/Neve_Tzedek_Products.listView-meta.xml
<ListView>
    <fullName>Neve_Tzedek_Products</fullName>
    <columns>Type__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Floor__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Capacity_Desks__c</columns>
    <columns>Calculated_Price__c</columns>
    <columns>Destination_Price__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Neve Tzedek</value>
    </filters>
    <label>Neve Tzedek Products</label>
</ListView>