force-app/main/default/objects/Product2/listViews/Rubinstein_Products.listView-meta.xml
<ListView>
    <fullName>Rubinstein_Products</fullName>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Floor__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Capacity_Desks__c</columns>
    <columns>Calculated_Price__c</columns>
    <columns>Destination_Price__c</columns>
    <columns>State__c</columns>
    <columns>Window__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Rubinstein</value>
    </filters>
    <label>Rubinstein Products</label>
</ListView>